# ProteiTask_TrafficAnalyzer

./: CMakeLists.txt  README.md
include/: SSLStatsCollector.h  deviceManager.h  packetCapturer.h  packetParser.h  packetReader.h
src/: main.cpp
src/packetCapture/: packetCapturer.cpp
src/packetParsing/: packetParser.cpp
src/packetReader/: packetReader.cpp
src/utils/: deviceManager.cpp
